--- a/CET/Views/Home/Index.cshtml
+++ b/CET/Views/Home/Index.cshtml
@@ -4,22 +4,24 @@
 	<title></title>
 </head>
 <body>
-	<h1>@Model.WelcomeMessage</h1>
-	<table>
-		@foreach (var ticket in Model.Tickets)
-		{
-		<tr>
-			<td>@ticket.Id</td>
-			<td>@ticket.Application</td>
-			<td>@ticket.TicketType</td>
-			<td>@ticket.Urgency</td>
-			<td>@ticket.Status</td>
-			<td>@ticket.CreateDate</td>
-			<td><a asp-action="Details" asp-route-id="@ticket.Id">More</a></td>
-		</tr>
-		}
+    <h1>@Model.WelcomeMessage</h1>
+    <table>
+        @foreach (var ticket in Model.Tickets)
+        {
+            <tr>
+                <td>@ticket.Id</td>
+                <td>@ticket.Application</td>
+                <td>@ticket.TicketType</td>
+                <td>@ticket.Urgency</td>
+                <td>@ticket.Status</td>
+                <td>@ticket.CreateDate</td>
+                <td><a asp-action="Details" asp-route-id="@ticket.Id">More</a></td>
+                <td><a asp-action="Update" asp-route-id="@ticket.Id">Update</a></td>
+            </tr>
+        }
 
-	</table>
-	<a asp-action="Create">Create New Ticket</a>
+    </table>
+    <a asp-action="Create">Create New Ticket</a>
+    <a asp-action="ChangeHistory">Change History Log</a>
 </body>
 </html>
