--- a/CET/Views/Home/Index.cshtml
+++ b/CET/Views/Home/Index.cshtml
@@ -6,22 +6,33 @@
 <body>
     <h1>@Model.WelcomeMessage</h1>
     <table>
+        <tr>
+            <td>TicketId        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
+            <td>Applcation Name &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
+            <td>TicketType      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
+            <td>Urgency         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
+            <td>Status          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
+            <td>CreateDate      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
+        </tr>
         @foreach (var ticket in Model.Tickets)
         {
-            <tr>
-                <td>@ticket.Id</td>
-                <td>@ticket.Application</td>
-                <td>@ticket.TicketType</td>
-                <td>@ticket.Urgency</td>
-                <td>@ticket.Status</td>
-                <td>@ticket.CreateDate</td>
-                <td><a asp-action="Details" asp-route-id="@ticket.Id">More</a></td>
-                <td><a asp-action="Update" asp-route-id="@ticket.Id">Update</a></td>
-            </tr>
+        <tr>
+            <td>@ticket.Id</td>
+            <td>@ticket.Application</td>
+            <td>@ticket.TicketType</td>
+            <td>@ticket.Urgency</td>
+            <td>@ticket.Status</td>
+            <td>@ticket.CreateDate</td>
+            <td>&nbsp &nbsp &nbsp &nbsp</td>
+            <td><a asp-action="Details" asp-route-id="@ticket.Id">More</a></td>
+            <td>&nbsp &nbsp &nbsp &nbsp</td>
+            <td><a asp-action="Update" asp-route-id="@ticket.Id">Update</a></td>
+        </tr>
         }
 
     </table>
     <a asp-action="Create">Create New Ticket</a>
+    &nbsp &nbsp &nbsp &nbsp
     <a asp-action="ChangeHistory">Change History Log</a>
 </body>
 </html>
